basic game completed

--- a/index.html
+++ b/index.html
@@ -1,56 +1,48 @@
 <html>
 <head>
 	<title>Hangman</title>
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-	<!-- jQuery library -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-	<!-- Latest compiled JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script type="text/javascript" src="words.js"></script>
-	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 	<div id="area">
-		<h1>Guesses Remainings <span>6</span> </h1>
-		<h2>Word Length <span> </span> </h2>
-		<div id="word-area"></div>
+		<h1>Guesses Remainings <span id="guess">6</span> </h1>
+		<h2>Word Length <span id="word-length"> </span> </h2>
+		<div id="word-game"></div>
 		<div id = "buttons1">
-			<button type="button" class="btn btn-default">Q</button>
-			<button type="button" class="btn btn-default">W</button>
-			<button type="button" class="btn btn-default">E</button>
-			<button type="button" class="btn btn-default">R</button>
-			<button type="button" class="btn btn-default">T</button>
-			<button type="button" class="btn btn-default">Y</button>
-			<button type="button" class="btn btn-default">U</button>
-			<button type="button" class="btn btn-default">I</button>
-			<button type="button" class="btn btn-default">O</button>
-			<button type="button" class="btn btn-default">P</button>
+			<button type="button" class="btn btn-default keys" id="Q">Q</button>
+			<button type="button" class="btn btn-default keys" id="W">W</button>
+			<button type="button" class="btn btn-default keys" id="E">E</button>
+			<button type="button" class="btn btn-default keys" id="R">R</button>
+			<button type="button" class="btn btn-default keys" id="T">T</button>
+			<button type="button" class="btn btn-default keys" id="Y">Y</button>
+			<button type="button" class="btn btn-default keys" id="U">U</button>
+			<button type="button" class="btn btn-default keys" id="I">I</button>
+			<button type="button" class="btn btn-default keys" id="O">O</button>
+			<button type="button" class="btn btn-default keys" id="P">P</button>
 		</div>
 		<div id="buttons2">
-			<button type="button" class="btn btn-default">A</button>
-			<button type="button" class="btn btn-default">S</button>
-			<button type="button" class="btn btn-default">D</button>
-			<button type="button" class="btn btn-default">F</button>
-			<button type="button" class="btn btn-default">G</button>
-			<button type="button" class="btn btn-default">H</button>
-			<button type="button" class="btn btn-default">J</button>
-			<button type="button" class="btn btn-default">K</button>
-			<button type="button" class="btn btn-default">L</button>
+			<button type="button" class="btn btn-default keys" id="A">A</button>
+			<button type="button" class="btn btn-default keys" id="S">S</button>
+			<button type="button" class="btn btn-default keys" id="D">D</button>
+			<button type="button" class="btn btn-default keys" id="F">F</button>
+			<button type="button" class="btn btn-default keys" id="G">G</button>
+			<button type="button" class="btn btn-default keys" id="H">H</button>
+			<button type="button" class="btn btn-default keys" id="J">J</button>
+			<button type="button" class="btn btn-default keys" id="K">K</button>
+			<button type="button" class="btn btn-default keys" id="L">L</button>
 		</div>
 		<div id="buttons3">
-			<button type="button" class="btn btn-default">Z</button>
-			<button type="button" class="btn btn-default">X</button>
-			<button type="button" class="btn btn-default">C</button>
-			<button type="button" class="btn btn-default">V</button>
-			<button type="button" class="btn btn-default">B</button>
-			<button type="button" class="btn btn-default">N</button>
-			<button type="button" class="btn btn-default">M</button>
+			<button type="button" class="btn btn-default keys" id="Z">Z</button>
+			<button type="button" class="btn btn-default keys" id="X">X</button>
+			<button type="button" class="btn btn-default keys" id="C">C</button>
+			<button type="button" class="btn btn-default keys" id="V">V</button>
+			<button type="button" class="btn btn-default keys" id="B">B</button>
+			<button type="button" class="btn btn-default keys" id="N">N</button>
+			<button type="button" class="btn btn-default keys" id="M">M</button>
 		</div>
 	</div>
+	<button type="button" class="btn btn-primary" id="new-game">New Game</button>
 </body>
+	<script type="text/javascript" src="words.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 </html>
