--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<div id="area">
-		<h1>Guesses Remainings <span id="guess">8</span> </h1>
+		<h1>Guesses Remaining <span id="guess">8</span> </h1>
 		<h2>Word Length <span id="word-length"> </span> </h2>
 		<div id="word-game"></div>
 		<div id = "buttons1">
